# casino-number-guessing-game

./: CMakeLists.txt  Jenkinsfile  README.md
.github/: dependabot.yml
.github/workflows/: c-cpp.yml
src/: Casino.cpp  Game.cpp  Game.h  Player.cpp  Player.h  casino.cpp  game.cpp  game.h  main.cpp  player.cpp  player.h
tests/: test_game.cpp
